--- a/app/tsconfig.app.json
+++ b/app/tsconfig.app.json
@@ -26,7 +26,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@layouts/*": ["./src/layouts/*"],
     }
   },
   "include": ["src"]
