--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,7 +8,8 @@
     "types": ["vite/client"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@layouts/*": ["./src/layouts/*"],
     },
   },
 }
