--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-proxy-middleware": "^3.0.3",
+    "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7"
   },
   "scripts": {
