--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
+    "next-themes": "^0.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "zustand": "^5.0.1"
   },
