--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-http-proxy": "^2.1.1",
     "http-proxy-middleware": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7"
@@ -14,6 +15,6 @@
     "server": "nodemon server.js",
     "client": "npm --prefix ../app run devhost",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm --prefix ../app run build && cp -r ../app/build/* ./static/."
+    "build": "npm --prefix ../app run build && cp -r ../app/dist/* ./static/."
   }
 }
